[WEB]: fix RequestCard overflow

--- a/client/src/components/RequestCard/RequestCard.scss
+++ b/client/src/components/RequestCard/RequestCard.scss
@@ -10,6 +10,7 @@
   width: variables.$card-width;
   max-width: variables.$card-width;
   background: variables.$white100;
+  max-height: 280px;
   height: 100%;
   border-radius: variables.$border-radius;
   padding: 10px;
@@ -65,6 +66,10 @@
     );
     flex: 1;
     width: 100%;
+
+    .card-text {
+      line-height: 0.9;
+    }
   }
 
   .row {
